  `geom_smooth(aes(group = 1))`. This is thanks to Kara Woo for pointing this
  out on twitter (https://twitter.com/kara_woo/status/783336540407685120).
* The "show" method for genclone objects now delimits populations and strata
  by a comma, avoiding confusion with multi-word population names. Thanks to
  @knausb for the fix in https://github.com/grunwaldlab/poppr/pull/116.  

BUG FIX
-----------

* The subsetting methods will now properly handle mlgs when using sample names
  to subset genclone and snpclone objects. See
  https://github.com/grunwaldlab/poppr/issues/114 for details.
* A plotting bug for `mlg.table()` was fixed so that the plots now show the
  maximum value.
* Bugs with subsetting bootgen and bruvomat objects with no loci specified were 
  fixed. See https://github.com/grunwaldlab/poppr/issues/118 for details.

poppr 2.2.1
===========

BUG FIX
-----------

* A problem exporting haploid sequence data to genalex format was fixed 
  (see https://github.com/grunwaldlab/poppr/issues/108)
* Data without population structure no longer throws an error in `imsn()`

NEW FEATURES
-----------

* You can now specify layout parameters in `imsn()`
* The *.msn functions will now take into account whether or not your data is set
  to collapsed MLGs. (see https://github.com/grunwaldlab/poppr/issues/107)

MISC
----

* Errors from mlg.filter now make more sense. 
  (see https://github.com/grunwaldlab/poppr/issues/109)
* The vignette poppr_manual has been converted to HTML format.
  (see https://github.com/grunwaldlab/poppr/issues/113)

poppr 2.2.0
===========

NEW FUNCTIONS
-----------

* `incomp()` will check your data to see if there are any incomparable samples.

NEW FEATURES
-----------

* Threshold argument added to `filter_stats()` 
  (see https://github.com/grunwaldlab/poppr/issues/94) 
* The pipe operator (`%>%`) is now exported from magrittr to make chaining 
  commands easier.
* `mlg.filter()` can now return multiple statistics.